Mon Jul 28 20:19:34 2003  David Helder  <dhelder@umich.edu>

	* NEWS: Update for 2.0.4

Wed Jul 23 21:32:30 2003  David Helder  <dhelder@umich.edu>

	* gnet-2.0.pc.in: Back out the -R${libdir} fix for Solaris.
	    This breaks other systems.
	   
	* configure.ac: Check sizeof(long), sizeof(void*)
	* tests/unpack_test.c (main): Compile 64 bit tests if long is 64
	    bit.  Use SIZEOF_VOIDP too.

	* src/tcp.c (gnet_tcp_socket_server_accept_nonblock): 
	    s/INVALID_SOCKET/-1/.  This #define isn't on Unix.

	* examples/echoclient-async.c (async_client_sin_iofunc): Don't
	   unref async_sin.  (New GNet 2 get_io_channel() semantics).
	   Fixes bug #118149.  Thanks charles.

Mon Jul 21 21:04:25 2003  David Helder  <dhelder@umich.edu>

	* src/inetaddr.c (gnet_gethostbyname): Solaris gethostbyname_r()
	   returns a struct hostent*, not an int.  Patch from 
	   charles.  Fixes bug #118023.

Wed Jun 11 20:29:44.29    Andrew Lanoix <alanoix@umich.edu>

	*src/tcp.c (gnet_tcp_socket_server_accept): Pass size of
		sockaddr_storage to accept() to get address of incoming
		conections on win32. Found by Hans Petter Jansson <hpj@ximian.com>
	*src/tcp.c (gnet_tcp_socket_server_accept_nonblock): "
	*src/tcp.c: Fix typecasting to satisfy Visual Studio
		
Sat Jun  6 17:07:19.73    Andrew Lanoix <alanoix@umich.edu>

	* src/inetaddr.c (gnet_inetaddr_new_list_async_cb): 
		&state->ias->data should be state->ias->data.
	* src/tcp.c (gnet_tcp_socket_new_async_direct)
		Do not call back on a failure in GNet 2.0.
		Both issues found by Hans Petter Jansson <hpj@ximian.com>.

Tue Jun  3 12:11:44 2003  David Helder  <dhelder@umich.edu>

	* AUTHORS: Change my email address


	* tests/unpack_test.c (main): Add 64 bit tests.
	* tests/unpack_test.c (main): Use sizeof's for size.
	* tests/unpack_test.c (main): Use lg*int where we were using
	   ig*int.

	* tests/pack_test.c (test_bytes): Skip the first half
	   of 64-bit answers.  (We store the correct value as
	   32 bits.)
